fixing popup on mobile

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -39,8 +39,13 @@ color: #fff;
 }
 
 a.perks-btn {
-width: 9rem;
-font-size: 1.5rem
+width: 5rem;
+font-size: 1.3rem;
+
+	@include media-breakpoint( lg ) {
+		width: 7.5rem;
+		font-size: 1.3rem;
+	}
 }
 
 .sticky {
